--- a/site/index.html
+++ b/site/index.html
@@ -18,8 +18,8 @@
           Drag & drop HTML file here
         </div>
         <button onclick="clearContent()" class="clear-btn">Clear All</button>
+        <button onclick="openFile()" id="openFileButton" class="upload-btn">Upload A File</button>
         <input type="file" id="fileInput" accept="text/html" style="display: none;">
-        <button onclick="document.getElementById('fileInput').click()" class="upload-btn">Upload A File</button>
       </div>
       <p></p>
 
