--- a/site/index.html
+++ b/site/index.html
@@ -44,7 +44,12 @@
         <!-- <table id="dataTable"></table> -->
       </div>
     </main>
+
+    <footer>
+      &copy; 2024 hantang
+    </footer>
   </div>
+
   <script src="assets/js/misc.js"></script>
   <script src="assets/js/search.js"></script>
   <script src="assets/js/loadfile.js"></script>
