--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Bookmark Search with Regexp</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
@@ -64,10 +64,10 @@
     <p>&copy; 2024 hantang</p>
   </footer>
 
-  <script src="assets/js/misc.js"></script>
-  <script src="assets/js/search.js"></script>
-  <script src="assets/js/loadfile.js"></script>
-  <script src="assets/js/loadtree.js"></script>
+  <script src="js/misc.js"></script>
+  <script src="js/search.js"></script>
+  <script src="js/loadfile.js"></script>
+  <script src="js/loadtree.js"></script>
 </body>
 
 </html>
