--- a/site/index.html
+++ b/site/index.html
@@ -53,7 +53,7 @@
     <section>
       <div id="file-area">
         <p>Bookmark Table</p>
-        <p>Total count: <span id="dataCount"></span></p>
+        <p>Total count: <span id="dataCount">0</span></p>
         <hr>
         <table id="dataTable"></table>
       </div>
