--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Bookmark Search with Regexp</title>
+  <title>HTML Bookmark Search with RegExp</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
@@ -18,7 +18,7 @@
           d="m2.96 3.44 -1.04 -0.48 -1.04 0.48V0.72c0 -0.176 0.144 -0.32 0.32 -0.32h1.44c0.176 0 0.32 0.144 0.32 0.32z" />
       </svg>
     </div>
-    <h1>HTML Bookmark Search with Regexp</h1>
+    <h1>HTML Bookmark Search with RegExp</h1>
   </header>
 
   <main>
