--- a/site/index.html
+++ b/site/index.html
@@ -12,8 +12,7 @@
 
   <header>
     <div>
-      <svg width="64px" height="64px" viewBox="0 0 3.84 3.84" version="1" xmlns="http://www.w3.org/2000/svg"
-        enable-background="new 0 0 48 48">
+      <svg width="64px" height="64px" viewBox="0 0 3.84 3.84" version="1" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 48 48">
         <path fill="#F44336"
           d="m2.96 3.44 -1.04 -0.48 -1.04 0.48V0.72c0 -0.176 0.144 -0.32 0.32 -0.32h1.44c0.176 0 0.32 0.144 0.32 0.32z" />
       </svg>
@@ -27,29 +26,31 @@
       <p>Upload a bookmark file exported from browser, or a table html.</p>
       <p>Click column names in table to sort the values.</p>
     </section>
+
     <section id="upload-area">
-        <div id="drop-area" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
-          Drag & drop HTML file here
-        </div>
-        <button id="clearButton" class="clear-btn">Clear All</button>
-        <button id="openFileButton" class="upload-btn">Upload A File</button>
-        <input type="file" id="fileInput" accept="text/html" style="display: none;">
-        <button id="extensionButton" class="upload-btn">Load Bookmarks</button>
+      <div id="drop-area" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
+        Drag & drop HTML file here
+      </div>
+      <button id="clearButton" class="clear-btn">Clear All</button>
+      <button id="openFileButton" class="upload-btn">Upload A File</button>
+      <input type="file" id="fileInput" accept="text/html" style="display: none;">
+      <button id="extensionButton" class="upload-btn">Load Bookmarks</button>
     </section>
 
     <section id="search-area">
-        <div id="search-options">
-          <!-- options -->
-        </div>
-        <button id="expandButton" class="expand-btn">Show All</button>
-        <button id="searchButton" class="search-btn">Search</button>
-        <button id="resetButton" class="reset-btn">Reset</button>
-        <p></p>
-        <label for="tableWidthRange">Table Width: </label>
-        <input type="range" id="tableWidthRange" min="50" max="100" step="10" value="100"
-          onchange="adjustTableWidth(this.value)" />
-        <span id="tableWidthLabel">100%</span>
+      <div id="search-options">
+        <!-- options -->
+      </div>
+      <button id="expandButton" class="expand-btn">Show All</button>
+      <button id="searchButton" class="search-btn">Search</button>
+      <button id="resetButton" class="reset-btn">Reset</button>
+      <p></p>
+      <label for="tableWidthRange">Table Width: </label>
+      <input type="range" id="tableWidthRange" min="50" max="100" step="10" value="100"
+        onchange="adjustTableWidth(this.value)" />
+      <span id="tableWidthLabel">100%</span>
     </section>
+
     <section>
       <div id="file-area">
         <p>Bookmark Table</p>
