--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Bookmark Search with RegExp</title>
+  <link rel="icon" type="image/png" href="icons/icon48.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
@@ -12,7 +13,8 @@
 
   <header>
     <div>
-      <svg width="64px" height="64px" viewBox="0 0 3.84 3.84" version="1" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 48 48">
+      <svg width="64px" height="64px" viewBox="0 0 3.84 3.84" version="1" xmlns="http://www.w3.org/2000/svg"
+        enable-background="new 0 0 48 48">
         <path fill="#F44336"
           d="m2.96 3.44 -1.04 -0.48 -1.04 0.48V0.72c0 -0.176 0.144 -0.32 0.32 -0.32h1.44c0.176 0 0.32 0.144 0.32 0.32z" />
       </svg>
@@ -23,40 +25,34 @@
   <main>
     <section id="note-area">
       <h2>Note:</h2>
-      <p>Upload a bookmark file exported from browser, or a table html.</p>
+      <p>Load bookmark by extension version, <br>
+        or upload a bookmark file exported from browser.
+      </p>
       <p>Click column names in table to sort the values.</p>
     </section>
 
     <section id="upload-area">
-      <div id="drop-area" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
-        Drag & drop HTML file here
-      </div>
-      <button id="clearButton" class="clear-btn">Clear All</button>
-      <button id="openFileButton" class="upload-btn">Upload A File</button>
-      <input type="file" id="fileInput" accept="text/html" style="display: none;">
-      <button id="extensionButton" class="upload-btn">Load Bookmarks</button>
+      <div id="drop-area" style="display: none;">Drag & drop HTML file here</div>
+      <button id="clear-button" class="clear-btn">Clear All</button>
+      <button id="open-file-button" class="upload-btn" style="display: none;">Upload A File</button>
+      <input type="file" id="file-input" accept="text/html" style="display: none;">
+      <button id="extension-button" class="upload-btn" style="display: none;">Load Bookmarks</button>
     </section>
 
-    <section id="search-area">
-      <div id="search-options">
-        <!-- options -->
-      </div>
-      <button id="expandButton" class="expand-btn">Show All</button>
-      <button id="searchButton" class="search-btn">Search</button>
-      <button id="resetButton" class="reset-btn">Reset</button>
-      <p></p>
-      <label for="tableWidthRange">Table Width: </label>
-      <input type="range" id="tableWidthRange" min="50" max="100" step="10" value="100"
-        onchange="adjustTableWidth(this.value)" />
-      <span id="tableWidthLabel">100%</span>
+    <section id="search-area" style="display: none;">
+      <p>Search Options</p>
+      <div id="search-options"> </div>
+      <button id="expand-button" class="expand-btn">Expand</button>
+      <button id="search-button" class="search-btn">Search</button>
+      <button id="reset-button" class="reset-btn">Reset</button>
     </section>
 
-    <section>
-      <div id="file-area">
-        <p>Bookmark Table</p>
-        <p>Total count: <span id="dataCount">0</span></p>
-        <hr>
-        <table id="dataTable"></table>
+    <section id="bookmark-area" style="display: none;">
+      <p>Bookmark Table</p>
+      <p>Total count: <span id="bookmark-count">0</span></p>
+      <hr>
+      <div>
+        <table id="bookmark-table"></table>
       </div>
     </section>
   </main>
@@ -65,10 +61,8 @@
     <p>&copy; 2024 hantang</p>
   </footer>
 
-  <script src="js/misc.js"></script>
-  <script src="js/search.js"></script>
-  <script src="js/loadfile.js"></script>
-  <script src="js/loadtree.js"></script>
+  <script src="js/util.js"></script>
+  <script src="js/render.js"></script>
 </body>
 
 </html>
