--- a/popup.html
+++ b/popup.html
@@ -1,26 +1,63 @@
 <html>
-  <head>
-    <style>
-      #loadBookmarksButton {
-        background-color: #3498db;
-        color: #ffffff;
-        border: none;
-        padding: 10px 20px;
-        font-size: 14px;
-        border-radius: 4px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
 
-      #loadBookmarksButton:hover {
-        background-color: #2980b9;
+<head>
+  <style>
+    :root {
+      --primary-color: #3f51b5;
+      --accent-color: #536dfe;
+      --background-color: #ffffff;
+      --text-color: #000000;
+      --button-color: #ffffff;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --background-color: #1D2129;
+        --text-color: #ffffff;
       }
-    </style>
-  </head>
-  <body>
-    <div>
-      <button id="loadBookmarksButton">Load Bookmarks</button>
-    </div>
-    <script src="popup.js"></script>
-  </body>
+    }
+
+    body {
+      height: 100px;
+      width: 200px;
+      background-color: var(--background-color);
+      color: var(--text-color);
+    }
+
+    div {
+      margin: 5px auto;
+      text-align: center;
+    }
+
+    button {
+      color: var(--button-color);
+      background-color: var(--accent-color);
+      border: none;
+      border-radius: 4px;
+      padding: 20px 25px;
+      cursor: pointer;
+      font-weight: 500;
+      text-transform: uppercase;
+      transition: background-color 0.3s;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    button:hover {
+      background-color: var(--primary-color);
+    }
+
+    p {
+      font-weight: 700;
+    }
+  </style>
+</head>
+
+<body>
+  <div>
+    <p>Bookmark Search</p>
+    <button id="loadBookmarksButton">Load Bookmarks</button>
+  </div>
+  <script src="popup.js"></script>
+</body>
+
 </html>
