--- a/src/popup.html
+++ b/src/popup.html
@@ -1,63 +1,39 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <style>
-    :root {
-      --primary-color: #3f51b5;
-      --accent-color: #536dfe;
-      --background-color: #ffffff;
-      --text-color: #000000;
-      --button-color: #ffffff;
-    }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bookmark Search</title>
 
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --background-color: #1D2129;
-        --text-color: #ffffff;
-      }
-    }
-
-    body {
-      height: 100px;
-      width: 200px;
-      background-color: var(--background-color);
-      color: var(--text-color);
-    }
-
-    div {
-      margin: 5px auto;
-      text-align: center;
-    }
-
-    button {
-      color: var(--button-color);
-      background-color: var(--accent-color);
-      border: none;
-      border-radius: 4px;
-      padding: 20px 25px;
-      cursor: pointer;
-      font-weight: 500;
-      text-transform: uppercase;
-      transition: background-color 0.3s;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    }
-
-    button:hover {
-      background-color: var(--primary-color);
-    }
-
-    p {
-      font-weight: 700;
-    }
-  </style>
+  <link rel="stylesheet" href="static/css/popup.css" />
 </head>
 
 <body>
-  <div>
-    <p>Bookmark Search</p>
+  <main>
+    <h2>Bookmark Search</h2>
+    <hr>
     <button id="loadBookmarksButton">Load Bookmarks</button>
-  </div>
-  <script src="popup.js"></script>
+    <button id="navigateBookmarksButton">Navigate Bookmarks</button>
+    <button id="exportBookmarksButton">Export Bookmarks</button>
+  </main>
+  <hr>
+  <footer>
+    <span> Help</span>
+    <span> | </span>
+    <span class="social">
+      <a href="https://github.com/hantang/search-bookmark" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 16 16" width="20" aria-hidden="true"
+          class="d-block">
+          <path
+            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
+          </path>
+        </svg>
+      </a>
+    </span>
+  </footer>
+
+  <script src="static/js/popup.js"></script>
 </body>
 
 </html>
