--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,6 @@
 
   <header>
     <div>
-      <!-- <svg width="64px" height="64px" viewBox="0 0 3.84 3.84" version="1" xmlns="http://www.w3.org/2000/svg"
-        enable-background="new 0 0 48 48">
-        <path fill="#F44336"
-          d="m2.96 3.44 -1.04 -0.48 -1.04 0.48V0.72c0 -0.176 0.144 -0.32 0.32 -0.32h1.44c0.176 0 0.32 0.144 0.32 0.32z" />
-      </svg> -->
       <img src="assets/logo.svg" alt="Bookmarks">
     </div>
     <h1>Bookmark Search (RegExp)</h1>
@@ -33,11 +28,10 @@
 
   <main>
     <section id="note-area">
-      <h2>Note:</h2>
-      <p>Load bookmark by extension version, <br>
-        or upload a bookmark file exported from browser.
-      </p>
+      <h2>📝 Note:</h2>
+      <p>Load bookmark by extension version, <br>or upload a bookmark file exported from browser.</p>
       <p>Click column names in table to sort the values.</p>
+      <p><strong>🎨 Bookmark Navigate</strong>: <a href="pintree.html">🔗 link</a> (forked from <i>pintree.io</i>).</p>
     </section>
 
     <section id="upload-area">
@@ -67,7 +61,9 @@
   </main>
 
   <footer>
-    <p>&copy; <span id="currentYear"></span> hantang</p>
+    <p>&copy; <span id="currentYear"></span>
+      <a href="https://github.com/hantang/search-bookmark" target="_blank">hantang</a>
+    </p>
   </footer>
 
   <script src="static/js/util.js"></script>
