Add bookmark dups

--- a/src/popup.html
+++ b/src/popup.html
@@ -15,6 +15,7 @@
     <hr>
     <button id="loadBookmarksButton">Load Bookmarks</button>
     <button id="navigateBookmarksButton">Navigate Bookmarks</button>
+    <button id="dupesBookmarksButton">Dedups Bookmarks</button>
     <button id="exportBookmarksButton">Export Bookmarks</button>
   </main>
   <hr>
