--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bookmark Search</title>
-  <link rel="icon" type="image/png" href="assets/icons/icon48.png">
-
+  <!-- Favicon -->
   <link rel="icon" href="assets/icons/icon-16x16.png" sizes="16x16" type="image/png">
   <link rel="icon" href="assets/icons/icon-32x32.png" sizes="32x32" type="image/png">
   <link rel="icon" href="assets/icons/icon-48x48.png" sizes="48x48" type="image/png">
   <link rel="icon" href="assets/icons/icon-64x64.png" sizes="64x64" type="image/png">
   <link rel="apple-touch-icon" href="assets/icons/apple-icon.png" sizes="180x180">
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-
+  <!-- Stylesheet -->
   <link rel="stylesheet" type="text/css" href="static/css/index.css">
 </head>
 
