Add link at index.html

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
       <p>Load bookmark by extension version, <br>or upload a bookmark file exported from browser.</p>
       <p>Click column names in table to sort the values.</p>
       <p><strong>🎨 Bookmark Navigate</strong>: <a href="pintree.html">🔗 link</a> (forked from <i>pintree.io</i>).</p>
+      <p><strong>🚀 Bookmark Dedups</strong>: <a href="dupes.html">🔗 link</a> (forked from <i>vaeth</i>).</p>
     </section>
 
     <section id="upload-area">
