--- a/src/index.html
+++ b/src/index.html
@@ -28,17 +28,19 @@
   <main>
     <section id="note-area">
       <h2>📝 Note:</h2>
-      <p>Load bookmark by extension version, <br>or upload a bookmark file exported from browser.</p>
+      <p>Load bookmark by extension version,
+        <br>or upload a bookmark file (<i>html/json format</i>) exported from browser.
+      </p>
       <p>Click column names in table to sort the values.</p>
       <p><strong>🎨 Bookmark Navigate</strong>: <a href="pintree.html">🔗 link</a> (forked from <i>pintree.io</i>).</p>
-      <p><strong>🚀 Bookmark Dedups</strong>: <a href="dupes.html">🔗 link</a> (forked from <i>vaeth</i>).</p>
+      <p><strong>🚀 Bookmark Deduplicate</strong>: <a href="dupes.html">🔗 link</a> (forked from <i>vaeth</i>).</p>
     </section>
 
     <section id="upload-area">
       <div id="drop-area" style="display: none;">Drag & drop HTML file here</div>
       <button id="clear-button" class="clear-btn">Clear All</button>
       <button id="open-file-button" class="upload-btn" style="display: none;">Upload A File</button>
-      <input type="file" id="file-input" accept="text/html" style="display: none;">
+      <input type="file" id="file-input" accept="text/html, application/json" style="display: none;">
       <button id="extension-button" class="upload-btn" style="display: none;">Load Bookmarks</button>
     </section>
 
