Support import json & export

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
       <button id="expand-button" class="expand-btn">Expand</button>
       <button id="search-button" class="search-btn">Search</button>
       <button id="reset-button" class="reset-btn">Reset</button>
+      <button id="export-button" class="expand-btn">Export</button>
     </section>
 
     <section id="bookmark-area" style="display: none;">
@@ -68,6 +69,7 @@
     </p>
   </footer>
 
+  <script src="static/js/util2.js"></script>
   <script src="static/js/util.js"></script>
   <script src="static/js/index.js"></script>
 </body>
