--- a/src/pintree.html
+++ b/src/pintree.html
@@ -158,6 +158,7 @@
     </div>
   </div>
 
+  <script src="static/js/util2.js"></script>
   <script src="static/js/pintree.js"></script>
   <script src="static/js/theme.js"></script>
 </body>
